
CHANGES

* ggmap now forms a directory in the working directory which caches queries.
* ggmap is now slightly less verbose: Terms of Service references are moved to package load.
* geocode has been given an overhaul; it now accepts a data argument for data frames (see examples), and no longer errors when it runs out of checks.
* stamen maps now hosts a wide new variety of maptypes that are kin of the existing ones.  see ?get_stamenmap.
* the license is now a GPL-2.

NEW FUNCTIONS

* calc_zoom: calc_zoom computes a reasonable zoom level for either (1) lon/lat variables in a data frame, (2) lon/lat ranges, or (3) a bounding box.

NEW ARGUMENTS

* qmplot now accepts maptype.
* several functions now have a force argument that demands re-downloading of maps.

FIXES

* fixed a bug in stamen cloudmade maps that resulted in a very (very) small miscalculation in the bottom right bounding box of each tile.
* several spaces have been removed from google maps urls; in particular, language="zh-CN" now works properly.  (thanks to github user JiangXD.)


ggmap 2.3
-------------------------------------------------------------------------

CHANGES

* now imports mapproj.
* theme_nothing now accepts argument legend to prevent legend wiping.
* ggmap and qmplot can now properly display legends in the map again, but transparency in the legend has been removed. (this will likely return if/when ggplot2 allows an alpha argument to element_rect).
* dataset crime now has variable offense as a factor, month and day as ordered factors.
* several functions now message the user with the URL queried as well as the Google Maps Terms of Service URL to better agree with Google's License Restrictions.
* gglocator now works properly.


DOCUMENTATION CHANGES

* documentation for get_map states that whole-world zooms are not supported. (thanks to suggestion by john hendy.)



ggmap 2.2
-------------------------------------------------------------------------
