@@ -38,6 +38,7 @@ export(url_lookup)
 import(RgoogleMaps)
 import(ggplot2)
 import(grid)
+import(jpeg)
 import(mapproj)
 import(plyr)
 import(png)
