@@ -1,4 +1,4 @@
-#' @import ggplot2 proto scales RgoogleMaps png plyr reshape2 grid rjson mapproj
+#' @import ggplot2 proto scales RgoogleMaps png plyr reshape2 grid rjson mapproj jpeg
 #' @docType package
 #' @name ggmap
 #' @aliases ggmap package-ggmap
