@@ -6,8 +6,9 @@ CHANGES
 * ggmap now forms a directory in the working directory which caches queries.
 * ggmap is now slightly less verbose: Terms of Service references are moved to package load.
 * geocode has been given an overhaul; it now accepts a data argument for data frames (see examples), and no longer errors when it runs out of checks.
-* stamen maps now hosts a wide new variety of maptypes that are kin of the existing ones.  see ?get_stamenmap.
+* stamen maps now hosts a wide new variety of maptypes that are kin of the existing ones.  see ?get_stamenmap.  also, as stamen has moved to jpgs, the package jpeg is now imported.
 * the license is now a GPL-2.
+
 
 NEW FUNCTIONS
 
